--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Иван
-                        <span class="text-primary">сидоров</span>
+                        Татьяна
+                        <span class="text-primary">Минаева</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        Хибинский проезд, 12 · (977) 848-9410 ·
+                        <a href="mailto:name@email.com">minaevatk24@mipkif.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">У меня есть опыт в использовании гибких фреймворков для создания надежного резюме для обзоров высокого уровня. Итеративные подходы к корпоративной стратегии способствуют совместному мышлению для продвижения общего ценностного предложения.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -60,38 +60,38 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Опыт</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Старший веб-разработчик</h3>
+                            <div class="subheading mb-3">Интеллектуальные решения</div>
+                            <p>Применяйте беспроигрышные стратегии выживания, чтобы обеспечить превентивное доминирование. В конечном счете, в будущем новая норма, которая развилась из поколения X, уже на подходе к созданию оптимизированного облачного решения. Пользовательский контент, создаваемый в режиме реального времени, будет иметь множество точек соприкосновения для вывода на внешний рынок.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Декабрь 2025 - настоящее время</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Веб-разработчик</h3>
+                            <div class="subheading mb-3">Интеллектуальные решения</div>
+                            <p>Воспользуйтесь "низко висящими плодами", чтобы определить, что является наиболее выгодным для бета-тестирования. Преодолейте цифровое неравенство с помощью дополнительных подсказок от DevOps. Погружение в нанотехнологии на информационной магистрали позволит сосредоточиться исключительно на результатах.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Сентябрь 2024 - Декабрь 2025</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Младший веб-дизайнер</h3>
+                            <div class="subheading mb-3">Кричите! Средства массовой информации</div>
+                            <p>Подкастинг - управление операционными изменениями внутри рабочих процессов для создания основы. Использование бесшовных ключевых показателей эффективности в автономном режиме для получения максимальной отдачи. Следите за развитием событий и одновременно глубоко изучайте менталитет стартапов, чтобы добиться сходства в кросс-платформенной интеграции.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Июль 2024 - Декабрь 2025</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">Стажер по веб-дизайну</h3>
+                            <div class="subheading mb-3">Кричите! Средства массовой информации</div>
+                            <p>Совместное администрирование расширенных рынков с помощью сетей plug-and-play. Динамично продвигайте пользователей B2C после установки базовых преимуществ. Наглядно демонстрируйте конвергенцию, ориентированную на клиента, без революционной рентабельности инвестиций.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Сентябрь 2024 - Июнь 2025</span></div>
                     </div>
                 </div>
             </section>
