--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Хибинский проезд, 12 · (977) 848-9410 ·
                         <a href="mailto:name@email.com">minaevatk24@mipkif.com</a>
                     </div>
-                    <p class="lead mb-5">У меня есть опыт в использовании гибких фреймворков для создания надежного резюме для обзоров высокого уровня. Итеративные подходы к корпоративной стратегии способствуют совместному мышлению для продвижения общего ценностного предложения.</p>
+                    <p class="lead mb-5">У меня есть опыт в использовании программ, чтобы создавать проекты для создания надежного резюме обзоров высокого уровня. Итеративные подходы к корпоративной стратегии способствуют совместному мышлению для продвижения общего ценностного предложения.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -63,7 +63,7 @@
                     <h2 class="mb-5">Опыт</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Старший веб-разработчик</h3>
+                            <h3 class="mb-0">Специалист по рекламе</h3>
                             <div class="subheading mb-3">Интеллектуальные решения</div>
                             <p>Применяйте беспроигрышные стратегии выживания, чтобы обеспечить превентивное доминирование. В конечном счете, в будущем новая норма, которая развилась из поколения X, уже на подходе к созданию оптимизированного облачного решения. Пользовательский контент, создаваемый в режиме реального времени, будет иметь множество точек соприкосновения для вывода на внешний рынок.</p>
                         </div>
@@ -80,7 +80,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Младший веб-дизайнер</h3>
-                            <div class="subheading mb-3">Кричите! Средства массовой информации</div>
+                            <div class="subheading mb-3">Вау! Средства массовой информации</div>
                             <p>Подкастинг - управление операционными изменениями внутри рабочих процессов для создания основы. Использование бесшовных ключевых показателей эффективности в автономном режиме для получения максимальной отдачи. Следите за развитием событий и одновременно глубоко изучайте менталитет стартапов, чтобы добиться сходства в кросс-платформенной интеграции.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Июль 2024 - Декабрь 2025</span></div>
@@ -88,7 +88,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Стажер по веб-дизайну</h3>
-                            <div class="subheading mb-3">Кричите! Средства массовой информации</div>
+                            <div class="subheading mb-3">Вау! Средства массовой информации</div>
                             <p>Совместное администрирование расширенных рынков с помощью сетей plug-and-play. Динамично продвигайте пользователей B2C после установки базовых преимуществ. Наглядно демонстрируйте конвергенцию, ориентированную на клиента, без революционной рентабельности инвестиций.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Сентябрь 2024 - Июнь 2025</span></div>
@@ -99,32 +99,32 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">Образование</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
+                            <h3 class="mb-0">Московский издательско-полиграфический колледж им. Ивана Федерова</h3>
+                            <div class="subheading mb-3">Университет Корё-национальный университет Кореи, Бакалавр</div>
+                            <div>Направление веб-разработки, реклама, графический и веб дизайн, PR</div>
                             <p>GPA: 3.23</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Март 2022 - Май 2026</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
+                            <h3 class="mb-0">Школа № 236 имени Героя Советского Союза Г.И. Щедрина, корпус № 1</h3>
+                            <div class="subheading mb-3">Кадетское,среднее общее образование</div>
                             <p>GPA: 3.56</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Август 2015 - Май 2023</span></div>
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Skills-->
-            <section class="resume-section" id="skills">
+            <!-- skills-->
+            <section class="resume-section" id="навыки">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <h2 class="mb-5">Навыки</h2>
+                    <div class="subheading mb-3">Языки и инструменты программирования</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
@@ -139,23 +139,23 @@
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Рабочий процесс</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Работа в крупных кампаниях
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Прохождение курсов графичесого дизайна
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Участие в волонтерской деятельности
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Участие в выставке рекламы 2025
                         </li>
                     </ul>
                 </div>
@@ -164,9 +164,9 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <h2 class="mb-5">Интересы</h2>
+                    <p>Помимо работы специалистом по рекламе, я люблю проводить большую часть времени на свежем воздухе. Зимой я люблю кататься на коньках и лыжах с друзьями и семьей. В теплое время года я путешествую по разным странам и городам, я увлекаюсь катанием на горных велосипедах, игрой в волейбол и изучением иностранных языков.</p>
+                    <p class="mb-0">Когда я вынуждена сидеть дома, я смотрю фильмы и телешоу в жанре комедии и фэнтези, я начинающий шеф-повар и провожу много свободного времени, изучая новейшие технологические достижения в мире веб-разработки.</p>
                 </div>
             </section>
             <hr class="m-0" />
